--- a/conf/test.config
+++ b/conf/test.config
@@ -11,12 +11,15 @@ params {
   config_profile_name = 'Test profile'
   config_profile_description = 'Minimal test dataset to check pipeline function'
   // Limit resources so that this can run on GitHub Actions
-  max_cpus   = 2
-  max_memory = 6.GB
-  max_time   = 6.h
 
-  // Input data
-  input     = 'https://raw.githubusercontent.com/nf-core/test-datasets/clipseq/metadata.csv'
-  fasta     = 'https://raw.githubusercontent.com/nf-core/test-datasets/clipseq/reference/chr20.fa.gz'
-  smrna_org = 'human'
+   # Your params for the minimal dataset start here guys
+  outdir = "./results"
+  fasta_path = "/data/MSc/2021/clipseq/sirna_trimmed_chr20.fa"
+  fastq_path = "/data/MSc/2021/clipseq/sirna_trimmed_chr20.fq.gz"
+  gtf_path = "/data/MSc/2021/clipseq/ref/chr20.gtf"
+  refgenome_path = "/data/MSc/2021/clipseq/ref/chr20.fa"
+  smrna_path = "/data/MSc/2021/clipseq/Homo_sapiens.smallRNA.fa"
+  star_path = "/data/MSc/2021/clipseq/index_star_ch20"
+  multiqc_config = "/data/omccaffrey/MA5112/nextflow_assignment/running_clipseq.nf/config_and_docs/multiqc_config.yaml"
+  output_docs = "/data/omccaffrey/MA5112/nextflow_assignment/running_clipseq.nf/config_and_docs/output.md"
 }
