--- a/conf/test.config
+++ b/conf/test.config
@@ -22,4 +22,5 @@ params {
   star_path = "/data/MSc/2021/clipseq/index_star_ch20"
   multiqc_config = "/data/omccaffrey/MA5112/nextflow_assignment/running_clipseq.nf/config_and_docs/multiqc_config.yaml"
   output_docs = "/data/omccaffrey/MA5112/nextflow_assignment/running_clipseq.nf/config_and_docs/output.md"
+  trimming = false
 }
