--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ params {
   save_index = false
   outdir = './results'
   publish_dir_mode = 'copy'
-  trimming = null
+  trimming = false
 
   // Boilerplate options
   multiqc_config = null
