--- a/nextflow.config
+++ b/nextflow.config
@@ -6,12 +6,11 @@
  */
 
 // Place your paramaters below.
-// you can hardcode them here, or set as null so other config overwrites it
+// you can hardcode them here, or set as null so configs overwrite it
 
-params{
+params {
   // fill out the rest used in main.nf
   trimming = null
-
 }
 
 // Container slug.
