--- a/conf/test.config
+++ b/conf/test.config
@@ -12,7 +12,7 @@ params {
   config_profile_description = 'Minimal test dataset to check pipeline function'
   // Limit resources so that this can run on GitHub Actions
 
-   # Your params for the minimal dataset start here guys
+  // Your params for the minimal dataset start here guys
   outdir = "./results"
   fasta_path = "/data/MSc/2021/clipseq/sirna_trimmed_chr20.fa"
   fastq_path = "/data/MSc/2021/clipseq/sirna_trimmed_chr20.fq.gz"
