--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@
 params {
   // fill out the rest used in main.nf
   trimming = null
+  tracedir = "${params.outdir}/pipeline_info"
 }
 
 // Container slug.
